# exam_project

./: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  scheduler.txt  supervisord.conf
banking/: apps.py  middleware.py  models.py  signals.py  tests.py  urls.py
banking/forms/: new_account.py  new_customer.py  new_loan_application.py  new_transaction.py  new_transfer.py
banking/management/commands/: apply_interest.py  demo_data.py  provision.py
banking/migrations/: 0001_initial.py  0002_account_type_account.py  0003_alter_account_type_interest_rate_ledger.py  0004_loanapplication.py  0005_loanapplication_status.py  0006_alter_loanapplication_customerid.py  0007_transaction_rename_account_id_ledger_account_and_more.py  0008_alter_transaction_id.py  0009_rename_account_typeid_account_account_type_and_more.py  0010_rename_customerid_loanapplication_customer.py  0011_loanapplication_supervisor_approval.py  0012_remove_loanapplication_supervisor_approval_and_more.py
banking/models/: account.py  account_type.py  costumer_rank.py  customer.py  customer_rank.py  ipbt.py  ledger.py  loan_application.py  loan_apply.py  transaction.py
banking/tasks/: confirm_transfer.py  init_transfer.py  pre_confirm_transfer.py  worker.py
banking/template/banking/: index.html
banking/templates/: base.html
banking/utils/: choices.py  constants.py  dates.py  errors.py  handle_transactions.py  ipbt_validation.py
banking/views/: customer.py  employee.py  index.py  ipbt.py
project/: settings.py  urls.py
templates/registration/: login.html
(+21 files in other folders)
