[tool.poetry]
name = "exam-project"
version = "0.1.0"
description = ""
authors = ["Lars Riel <larsriel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
