[tool.poetry]
name = "exam-project"
version = "0.1.0"
description = ""
authors = ["Lars Riel <larsriel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
python-dotenv = "^1.0.1"
python-dateutil = "^2.8.2"
django-rq = "^2.10.1"
requests = "^2.31.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
